--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ rust-stemmers = "1.2.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 unicode-segmentation = "1.11.0"
+
+[[bin]]
+name="titorelli_rs"
+path="src/main.rs"
